--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,14 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.3.3'
-	id 'io.spring.dependency-management' version '1.1.6'
+	id 'org.springframework.boot' version '3.1.5'
+	id 'io.spring.dependency-management' version '1.1.3'
+//	id 'org.springframework.boot' version '2.7.18'
+//	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+}
+
+ext {
+//	set('springCloudVersion', "2023.0.3") // 사용할 스프링 클라우드 버전 정의
+	set('springCloudVersion', "2022.0.4")
 }
 
 group = 'com.polarbookshop'
@@ -17,9 +24,6 @@ repositories {
 	mavenCentral()
 }
 
-ext {
-	set('springCloudVersion', "2023.0.3") // 사용할 스프링 클라우드 버전 정의
-}
 
 dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-config-server'
