--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,17 +20,32 @@ spring:
           clone-on-start: true # ?? ????? ?? ???? ??? ??? ?? ??? ??
           force-pull: true # ?? ???? ?? ???? ?? ?? ??? ?? ?????? ????
 
+logging:
+  pattern:
+    level: "%5p [${spring.application.name},%X{trace_id},%X{span_id}]"
+
+#info:
+#  system: Polar Bookshop
+
 management:
   endpoints:
     web:
       exposure:
-        include: health
+#        include: configprops, env, health, heapdump, info, loggers, mappings, prometheus
+        include: health, prometheus
   endpoint:
     health:
       show-details: always
       show-components: always
       probes:
         enabled: true
+#  info:
+#    env:
+#      enabled: true
+#    java:
+#      enabled: true
+#    os:
+#      enabled: true
   metrics:
     tags:
       application: ${spring.application.name}
